<resources>
    <string name="app_name">Database</string>
    <string name="action_settings">Settings</string>
    <string name="productID">Not assigned</string>
    <string name="lblProductID">Product ID</string>
    <string name="lblProductName">Product Name</string>
    <string name="lblProductQuantity">Product Quantity</string>
    <string name="btnAdd">Add</string>
    <string name="btnFind">FIND</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnUpdate_string">Update</string>
    <string name="btnClear_string">Clear Database</string>

</resources>
